Fix unintentional overflow

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ main {
 }
 
 .image-container img {
-    visibility: hidden;
+    display: none;
     width: 100%;
     height: 100%;
 }
